# nxplayer

./: .gitmodules  CMakeLists.txt  README.md
resources/i18n/en-US/: iso639.json  main.json
resources/i18n/zh-Hans/: main.json
resources/xml/activity/: main.xml  video.xml
resources/xml/fragment/: local_driver.xml  player_setting.xml
resources/xml/view/: video_view.xml
scripts/: build_switch.sh  build_switch_deko3d.sh
src/include/activity/: main_activity.hpp  video_activity.hpp
src/include/fragment/: local_driver.hpp  player_setting.hpp
src/include/utils/: gesture_helper.hpp  intent.hpp  presenter.h  register.hpp  utils.hpp
src/include/view/: mpv_core.hpp  video_view.hpp
src/source/: main.cpp
src/source/activity/: main_activity.cpp  video_activity.cpp
src/source/fragment/: local_driver.cpp  player_setting.cpp
src/source/utils/: gesture_helper.cpp  intent.cpp  register.cpp  utils.cpp
src/source/view/: mpv_core.cpp  video_view.cpp
